--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 
 \maketitle
 
+\DBA{I inserted various LEMMAs, DEFINITIONs, EXAMPLEs to make the structure more obvious, and to provoke to flesh these out and nail them down.}
 
 \input{market}
 \input{twosides}
