--- a/market.tex
+++ b/market.tex
@@ -181,6 +181,7 @@ If we void the payment completely this can have the oposite effect, biasing expe
 \section{The signal reporting vcg mechanism can work even when utilities are not part of the common prior}
 
 the mechanism, but not necesarily the experts, needs access to the utility function of the decision maker and the prior over which expectations are taken 
+\DBA{does the utility function of the decision maker (along with prior) ``explain'' its noncompliance? This is somehow a conceptual question, not sure if it makes a difference to the meat of the paper. }
 
 for a cancer example; the chemiotherapy specialist might explain the likely side effects conditional on their knowledge of the specifics of the patient (the rapidly dropping cost of sequencing a genome means this) without needing to understand the relative value the patient places on discomfort relative to life lengthening, while the surgeon might explain the (again subject tot he specific characteristics of the subject) risks he foresees in the surgury (in contrast to the baseline risks of the populatin that gets the procude which is what cna be observed, a reasoable prior) for that patient, without needing to udnerstand the risk aversion of the patient which would be necesary for calculating their utility.
 
