first pass back

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,8 @@
 
 \maketitle
 
-\DBA{I inserted various LEMMAs, DEFINITIONs, EXAMPLEs to make the structure more obvious, and to provoke to flesh these out and nail them down.}
+\NDP{Started fleshing.}
+
 
 \input{market}
 \input{twosides}
