--- a/defs.tex
+++ b/defs.tex
@@ -15,6 +15,9 @@
 %\doi{XXXXXXX.XXXXXXX}% TeXSupport
 
 \newcommand{\DBA}[1]{{\color{blue} {\bf[ DBA}: #1 {\bf]}}}
+\newcommand{\NDP}[1]{{\color{red} {\bf[ NDP}: #1 {\bf]}}}
+
+
 
 % Any additional packages needed should be included after jmlr2e.
 % Note that jmlr2e.sty includes epsfig, amssymb, natbib and graphicx,
