added first sketch of a IC proof fromt he VCG style, bounding the payments mmight not retain full IC

--- a/twosides.tex
+++ b/twosides.tex
@@ -52,3 +52,9 @@ Both the subjects rewards are idependent conditional on the treatment, and the t
 if they are not independent one can consider a situation in which if you take my bid as truthful I can gain by lying to confuse your bid in the next period, (and i buy it in the period before or during tricking you)
 
 
+
+
+\section{Incentive Compatibility for Subjects}
+
+One natural question given the bayesian incentive compatible bandit exploration literautre, is wether these mechanisms can work when all subjects are expected utility maximizers. If the experts bring enough information to bear, the answer is yes, and it can be so without hidding past subjects outcomes, if the experts bring sufficient information. Note however,that there are intermediate situations 
+
