--- a/market.tex
+++ b/market.tex
@@ -1,4 +1,5 @@
 %!TEX root = main.tex
+% optimal decision elicitiation algorithm
 
 Consider a setting with multiple experts providing advice to a subject, who wishes to incentivize them to inform them of which of a set of available actions maximize the reward.
 One natural way to attempt to do is by applying the machinery of prediction markets based on sequentially shared proper scoring rules, and only settlign the markets where actions are taken. Doing this in an incentive compatible manner for the experts is however incompatible with maintaining the subjects freedom to select the action that appears optimal ex-post (\cite{othman2010decision,  chen2014eliciting}, that is using the max decision rule. 
@@ -14,21 +15,17 @@ We then analyze a simple bid based variation of the mechansim, and provide a suf
 
 \section{Model}
 
-We consider a single subject with access to $K$ possible choices, their outcomes are sufficiently characterized for the subject by a reward vector $R$ which is unobservable to the subject, where each element in $r_k$ corresponds to the reward the subject receives if he carries out the corresponding action in $K$ . We consider a set of $N$ experts, each of whom have access to some signal $s_i$ which are potentially informative about $R$, we use $S$ to denote the vector containing all signals.  $P$ denotes a prior distribution over $P(R|S) $ which is common knowledge.
+We consider a single subject with access to $K$ possible choices, their outcomes are sufficiently characterized for the subject by a reward vector $R$ which is unobservable to the subject, where each element in $r_k$ corresponds to the reward the subject receives if he carries out the corresponding action in $K$ . We consider a set of $N$ experts, each of whom have access to some signal $s_i$ which are potentially informative about $E[e|a,c]$, we use $S$ to denote the vector containing all signals.  $P$ denotes a prior distribution over $P(R|S) $ which is common knowledge.
 
-\NDP{Does this seems worth noting at this point? it maps to mechanism design adn chen et al more clearly, but it doesnt add much light}  To map to the mechanism design literature the $P$ would be over states of the world in $\Omega$ and each state of the world consists of a agent type (complier probability and action outcome and the value (reward) a utility functin placed on it) and the signals of each expert)
+To map to the mechanism design literature the $P$ would be over states of the world in $\Omega$ and each state of the world consists of a agent type (complier probability and action outcome and the value a utility functin placed on it, which equates to rewards in our notation) and the signals of each expert.
 
-A mechanism anounces a payment rule $p_i(r^*,a,c,S)$, with $p_i$ being the payment to expert $i$. We will denote by $\hat{c}^{*}$ the chosen action that maximizes the reward given the reported signals $\hat{S}$, and by $c^{*}$ the optimal choice given the true signals.
-We seek a mechanism that  $c^{*} = \hat{c}^{*}$.
-
+A mechanism anounces a payment rule $p_i(\hat{s}, c,a,r)$, with $p_i$ being the payment to expert $i$, with $\hat{s}$ being the reported signals, $\hat{c}$, and by $c^{*}$ the reward maximizing choice given the true signals.
 Each experts receives their signals $s_i$, and makes a reports $\hat{s}_i$ to the mechanism, which outputs a chosen action $c^{*}$.
-The subject observes the action chosen by the mechanism $c$, and takes a (potentially different) action $a$. A reward $r^{*}$ is observed, and the mechanism makes the corresponding payments.
+The subject observes the action chosen by the mechanism $\hat{c}$, and takes a (potentially different) action $a$. A reward $r$ is observed, and the mechanism makes the corresponding payments.
+
+An experts $i$ report is truthful when $\hat{s}_i=s_i$. A mechanism is incentive compatible when truthful reports maximize the payment experts receive and this holds for all experts. This can be in dominant strategies or in a bayesian nash equilibrium.  We seek efficient mechanisms, that is $c^{*} = \hat{c}$ for all posible signals.
 
 
-
-%There are n players, i = 1􏰸􏰷􏰷􏰷􏰸n. There is a finite set of states of the world, Ω, and a random variable (“security”) X : Ω → R. As in Aumann (1976), each player i receives information about the true state of the world, ω ∈ Ω, accord- ing to partition Πi of Ω (i.e., if the true state is ω, player i observes Πi(ω)). For notational convenience, without loss of generality, assume that the join (the coarsest common refinement) of partitions Π1􏰸􏰷􏰷􏰷􏰸Πn consists of single- ton sets; that is, for any two states ω1 ̸= ω2, there exists player i such that Πi(ω1) ̸= Πi(ω2). Π = (Π1􏰸􏰷􏰷􏰷􏰸Πn) is the partition structure. Players have a common prior distribution P over states in Ω.
-
-An experts $i$ report is truthful when $\hat{s}_i=s_i$. A mechanism is incentive compatible when truthful reports maximize the payment experts receive and this holds for all experts. This can be in dominant strategies or in a bayesian nash equilibrium.
 
 \section{Shared Reward Mechanism}
 
@@ -39,7 +36,7 @@ Here we explore a set of mechanisms based around the idea of sharing the rewards
 Let us first consider a very basic direct mechanism, which will help us understand the model and the limitations that subjects freedom imposes. 
 A simple mechanism that is strictly incentive compatible (in equilibrium) for an expert to reveal their signal when subjects are utility maximizers is to give all experts a share of the reward. Equivalently (in expectation) run a lottery after the reports are submitted that assigns a share of the reward to the expert that wins. 
 
-In this case the signals may be arbitrary, the payment rule is invariant to them, and defined as $\pi_i  = (\alpha / N ) r^{*} $ with $\alpha < 1$. Note that we are not defining the payment rule to be conditional on the subjects actual action in any way. %In particular, it might naively seem appropiate to only give the share when the chosen action is the actual action carried out. 
+In this case the signals may be arbitrary, the payment rule is invariant to them, and defined as $\pi_i  = (\alpha / N ) r $ with $\alpha < 1$. Note that we are not defining the payment rule to be conditional on the subjects actual action in any way. %In particular, it might naively seem appropiate to only give the share when the chosen action is the actual action carried out. 
 
 
 \subsubsection{Limitations}
@@ -76,85 +73,125 @@ This can be somewhat relaxed, since the needed property it implies is that the m
 
 $E[ ^{*}|c_i]  >= E[ r^{*}|c_j] if E[ ^{*}|a_i]  >= E[ r^{*}|a_j]  \forall j \neq i \in K$ 
 
-
-
 Note that under this assumption existing mechanisms for the many expert setting are not incentive compatible unless subjects can credibly commit to using a randomized strategy which places positive mass on dominated action (i.e. there are no ex-post incntive compatible mechanisms based on proper scoring rules and voiding given a no defiers assumption):
 
-\begin{thm}
-        Randomized decision rules are necesary for incentive compatible  scoring rule decision markets (SRDM)
-\end{thm}
-
-\begin{proof}
-	\cite{chen2014eliciting}
-\end{proof}
-
-In fact, it has been shown that
-
-\begin{eg}[under SRDM with a utitlity maximizing subject an expert can always benefit from exaggerating the success probability of a suboptimal action]
-	counterexample from \cite{othman2010decision}
-\end{eg}
-
-
-\begin{Corollaries}
-	If a subject is free to either maximize their expected utility at decision time, or to have probability zero of taking some actions due to their revealed prices, then a SRDM is not IC for them.
-\end{Corollary}
 
 
 There is some extra flexibility more than no defiers which we should use, for example differential compliance rates for different actions, the mechanisms selects the action that most raises the reward not the one who has the highest reward (for exmaple a action that has the seccond highest reward but 1\% noncompliance might be chosen instead of one  that has 99\% noncompliance and the highest reward. No defiers buys us the extra part that chosen is the highest reward action, so makes life easier for the subject (if the noncpliance depened on the signals the expert receives a utility maximizing decision maker would have to consider other decision markets noncomplaince characteristics in the prior before deciding how to interpret the chosen action; this removes such ambiguities and doesn't seem to loose too much generality)
 
 
-\section{A Direct Mechanism with Common Priors}
+
+\section{Limits of Sequential Scoring Rule and Void Decision Markets}
+
+\begin{eg}[under SSRDM with a utitlity maximizing subject an expert can always benefit from exaggerating the success probability of a suboptimal action]
+	counterexample from \cite{othman2010decision}
+\end{eg}
+
+
+\NDP{Having the first theorem in a paper seems less than ideal, maybe we can instead state the following corollary which reexpresses it in our terms?}
+
+Further, an inmidiate corollary to a theorem X of \cite{chen2014eliciting} 
+ which states that Randomized decision rules with full support are necesary for incentive compatible  scoring rule decision markets (SRDM) is : If a subject is free to either maximize their expected utility at decision time, or can have probability zero of taking some actions, then a SRDM is not IC for them.
+
+
+
+
+\section{A Direct VCG style mechanism for optimal decision elicitation }
+Gien these desires and the limitation of the existing mechanism we take a approach inspired by direct VCG-style mechanism.
 
 All agents know a common prior that gives full probability distribution of rewards over all posible signals, chosen actions and actual actions.
 
-A direct VCG-style mechanism.
-
 For each expert $i$, compute the optimal action to choose without using that experts report (i.e. marginalizing over the prior on signal $i$ signal), denote this action $\hat{c}_{-i}$ and it's expected reward 
 
-$E[\hat{r}_{-i}] = E[ r| \hat{c}_{-i}, \bigcup \hat{s}_j  \forall j \neq i \in N]$
+$E[\hat{r}_{-i}] = E[ r| \hat{c}_{-i}, \bigcup \hat{s}_j  \forall j \neq i \in N]$ \NDP{is there a better way to notate this conditioning on the information in all the other signals than the experts? maybe $S_{-i}$ to denote the joint signals off all the others?}
+
 
  The payment rule is announced as follows:
 
 \[
     \pi_i = 
 \begin{cases}
-    r^{*} - E[\hat{r}_{-i}] ,& \text{if } \hat{c}_{-i} \neq c\\
+    r - E[\hat{r}_{-i}] ,& \text{if } \hat{c}_{-i} \neq c\\
     0,              & \text{otherwise}
 \end{cases}
 \]
 
-If a experts reports alter the chosen action then expert gets a payment proportional to the difference between the realized action and the expectation of the 
 
- Note that this doesnt change the expectation when reports are truthful, but it does when they are not; since the misreported signals can't in expectation increase the payoff when others are truthful, it is never optimal to manipulate when others are truthful. 
+Each expert reports their signal, the mechanism calculates the action that maximizes the reward, $c$ and chooses it. After observing the actual action taken $a$ and its reward $r$ the payments are made, this concludes the mechansim.
 
+Note that conditional on the action taken and the payments do not depend on the reported signal of agent $i$ if we hold fixed the chosen action. 
 
-Each expert reports their signal, the mechanism calculates the action that maximizes the reward and chooses it. 
-\NDP{is there a better way to notate this? maybe $S_{-i}$ to denote the joint signals off all the others?}
+\begin{lem}
+	the only way a experts reports affects their payments is via the chosen action.
+\end{lem}
 
-
-The difference between the received payoff and the payoff that would have been obtained in expectation if only the other experts reports had been taken into account , the payment rule is:
-
-Note that such payments do not depend on the reported signal of agent $i$, instead they depend on the achieved outcome and the expected reward of the optimal action without using a given agents signal.
-
-\DBA{It took me a while to notice that there are three quantities that are relevant: (1) received payoff, (2) expected payoff from using all agents reports except winner, (3) expected payoff from using all agents reports including winner. It seems only (1) and (2) are used -- and (3) is not. Worth emphasizing this more, since it also matters for noncompliance (comment below).}
-\NDP{The winner is not a clearly defined notion in the signal reporting mechanism (as opposed to the bid based one). We could have them submit a bid too, and use the seccond highest bid, but the revelation priciple suggest this is unnecesary. 
-
-OTOH the above mechanism has the problem that if my signal is bad news that makes all payoffs lower and changes the optimal action, I have to pay out (Not sure about this, does the marginalization over the prior make it wash out in expectation?) That is, if you didnt have my signal, you would assume that some share of the time I would be getting the bad signal and you would pick an even worst action. So ex-ante it is rational even if ex-post it is not.
-
-The situation }
+\begin{eg}[redundant experts]
+	If you have two experts and they both observe and report the same signal, they both get outcome zero. 
+\end{eg}
 
 
- 
-$\pi_i  = r^{*} - E[\hat{r}_{-i}] $
+\begin{lem}
+	useless experts cannot profit from participation
+\end{lem}
+
+this is inmidiate from hwo the payment rule and useless experts are defined, since if there is no ifnromation to raise r and that is all tha that can lead to 
+
+\subsection{Incentive Compatibility and Efficiency}
 
 
-}
+\begin{defn}[Bayes-Nash Incentive Compatibility]
+	A BNE where all experts truthfully report their signals.
+\end{defn}
 
-As presented this mechanism might hae unbounded payments and result in a net loss of utility for the decision maker.
-This could lead to overpayments (paying more than the rewards of the experts), but you can scale the payments of the experts so that they are over some fraction of the total reward, and using the prior you can calibrate this to wokr out (TODO: less hand wavy)
+There is a  equilibrium where all experts maximize their payment by maximizing the probability that the action with the highest reward is taken; if all other reports are truthful and under a no defiers assumption then this is optimized by being truthful.
+
+\begin{proof}
+For a given expert $i$ let all other experts report truthfully, then substituing in the true signals into the reports the expert faces 
+
+
+\[
+    \pi_i = 
+\begin{cases}
+    r(a) -  E[ r| c_{-i}, \bigcup s_j  \forall j \neq i \in N] ,& \text{if } \hat{c}_{-i} \neq c\\
+    0,              & \text{otherwise}
+\end{cases}
+\]
+
+thus the only thing his report will affect in his payment is $r(a)$ via the choice of $a$, given all other experts are truthful then by construction if he is truthful this will select the $a$ that maximizes $r$. Thus truthfulness is a BNE.
+
+\end{proof}
+
+\subsection{Potential Negative Expetation for Subject}
+Payments can be more than the improvement in the reward the mechanism creates \NDP{This is standard of VCG style stuff; we are getting efficiency and truthfulness, so the payments dont work out or the mechanism isnt voluentary}. 
+
+
+\begin{eg}[expensive experts]
+	Let there be two experts, two actions ${\alpha,\beta}$ and four equl probability states of the world, ${A,B,C,D}$, with payoffs to the actions correspondingly as ${(0,1),(0,-1),(-1,0),(1,0)}$. Let one expert oberve that they are in either ${A,B}$ or ${C,D}$ and the other ${B,C}$ or ${A,D}$. A uniform random strategy ahcieves a expected value of 0. An optimal strategy with access to a single expert (either one) achieves a value of 0. Using the signals of both we can achieve reward 1. Thus the VCG payments are $1$ to each, and the mechansim improves the subjects wellfare by $1$ while making $2$ in payments, thus $-1$ 
+\end{eg}
+
+\NDP{Can you check my algebra in the above example, it is a variation on a classic in the literature on prediciton markets where a separability condition doesnt hold.}
+
+
+
+\section{Bounded Payments}
+As presented the direct VCG mechanism might hae unbounded payments (if there are states of the world with sufficiently high reward differentials and a sufficiently large number of experts with complementary signals) and thus the subject might be betteroff not participating a priori. Here we introduce a variation on the mechanism that re-scales payments using the prior so they are bounded.
+
+
 \DBA{Provide argument that the rescaling component of the mechanism cannot be gamed}
 
-\begin{eg}[bounding payments]
+\NDP{This might not be possible. see http://web.stanford.edu/~jacksonm/mechtheo.pdf }
+
+\begin{eg}[bounding payments mechanism]
+
+Let $E[r|c(s)]$ denote the expected reward obtained from choosing the optimal action using all signals if they where reported truthfully, and $E[r|c(p)] $ the expetec treward from picking the action using only the prior and no singals. Thus $E[r|c(s)] - [r|c(p)] $ is the expected surplus from using the information in a truthful mechanism relative to using only the priors.
+
+\[
+    \pi_i = 
+\begin{cases}
+    ((r - E[\hat{r}_{-i}] ) / N )       (E[r|a(s)] - [r|a(p)] )          ,& \text{if } \hat{c}_{-i} \neq c\\
+    0,              & \text{otherwise}
+\end{cases}
+\]
 
 \end{eg}
 
@@ -165,33 +202,15 @@ This could lead to overpayments (paying more than the rewards of the experts), b
 
 
 
-\begin{lem}
-	the only way a experts report affects their payments is via the chosen action.
-\end{lem}
-
-\begin{eg}[redundant experts]
-	If you have two experts and they both observe the same signal, they both get outcome zero. \DBA{note: redundant experts get zero in expectation. If actual reward is more than predicted, then they all get paid; if it is less then they all get negative payments.}
-\end{eg}
-
 
 
 the experts have to have the potential for negative payoffs (even through the expected payoff in equilibrium is positive). Since the mchanism stoping the payments around zero would change the expectation. 
 
 
-\subsection{Bayesian Nash Incentive Compatibility and Full Efficiency}
-
-There is a  equilibrium where all experts maximize their payment by maximizing the probability that the action with the highest reward is taken; if all other reports are truthful and under a no defiers assumption then this is optimized by being truthful.
 
 
-\begin{defn}[nash equilibrium]
-	lala
-\end{defn}
 
-\begin{defn}[bayesian nash equilibrium; BNE incentive compatibility]
-	fala
-\end{defn}
-
-\begin{defn}[dominant truthfulness]
+\begin{defn}[Dominant Strategy Truthfulness]
 	ftw
 \end{defn}
 
@@ -294,12 +313,7 @@ if each expert knows the value of a action the MSR and Void mechanism in the sty
 
 
 
-\section{Incentive Compatibility for Subjects}
-
-One natural question given the bayesian incentive compatible bandit exploration literautre, is wether these mechanisms can work when all subjects are expected utility maximizers. If the experts bring enough information to bear, the answer is yes, and it can be so without hidding past subjects outcomes, if the experts bring sufficient information. Note however,that there are intermediate situations 
-
 \subsection{A sufficient condition}
 
 when the expert who won the auction selects and action, particularly in the early rounds she might be doing it becuase he wishes to explore, and thus the incentives 
-
 
