--- a/market.tex
+++ b/market.tex
@@ -189,7 +189,7 @@ Let $E[r|c(s)]$ denote the expected reward obtained from choosing the optimal ac
   \rho_i  = ( \pi_i  / \sum \pi_{-i} )    \alpha  (E[r|a(s)] - E[r|a(p)] 
 \]
 
-while this guarantees we never pay more than alpha share of the benefit, it is gamable. in particular the experts report now affects his payout beyodn the chosen action by affecting the payout of the other agents before scaling (\pi_{-i}).
+while this guarantees we never pay more than alpha share of the benefit, it is gamable. in particular the experts report now affects his payout beyodn the chosen action by affecting the payout of the other agents before scaling ($\sum \pi_{-i}$).
 
 \end{eg}
 
